# dme

./: .clang-format  .cppcheck_suppress  CMakeLists.txt  CTSet.cpp  CTSet.hpp  INSTALL.md  INSTALLATION.md  Makefile  Matrix.cpp  Matrix.hpp  Motif.hpp  MotifSite.cpp  MotifSite.hpp  Pattern.cpp  Pattern.hpp  README.md  README.txt  ScoringMatrix.cpp  ScoringMatrix.hpp  dme2  dme2.cpp  dme2_common.hpp  dme_tcm_workspace.cpp  dme_tcm_workspace.hpp  dme_zoops_workspace.cpp  dme_zoops_workspace.hpp
cmake/: static_analysis.cmake
cread/: Alphabet.cpp  Alphabet.hpp  FastaFile.cpp  FastaFile.hpp  Makefile  Matrix.cpp  Matrix.hpp  Motif.cpp  Motif.hpp  MotifSite.cpp  MotifSite.hpp  Pattern.cpp  Pattern.hpp  PatternFactory.cpp  PatternFactory.hpp  ScoringMatrix.cpp  ScoringMatrix.hpp  cread.hpp
data/: example_bg.faa  example_fg.faa
